{
  "version": 4,
  "terraform_version": "1.0.4",
  "serial": 49,
  "lineage": "9cd0c130-a86a-9c17-a68e-6805bb5c8842",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "elrr_xapi_gw_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0b46a3b3377825e2a",
            "domain": "vpc",
            "id": "eipalloc-03a5805db49030908",
            "instance": "i-0c370323039bd00a7",
            "network_border_group": "us-east-2",
            "network_interface": "eni-0a2e44802cb694112",
            "private_dns": "ip-10-0-6-35.us-east-2.compute.internal",
            "private_ip": "10.0.6.35",
            "public_dns": "ec2-3-14-242-255.us-east-2.compute.amazonaws.com",
            "public_ip": "3.14.242.255",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_instance.elrr_xapi_gateway",
            "aws_key_pair.elrr_public_kp",
            "aws_security_group.elrr_xapi_gw_sg",
            "aws_subnet.elrr_xapi_gateway_subnet",
            "aws_vpc.elrr_vpc",
            "data.aws_availability_zones.elrr-azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "elrr_agent1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b9064170e32bde34",
            "arn": "arn:aws:ec2:us-east-2:452917972716:instance/i-0c60fe9b6b92e00e7",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "snapshot_id": "snap-05bc449e542abbf3d",
                "throughput": 0,
                "volume_id": "vol-06ae13fa8be3f4df1",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c60fe9b6b92e00e7",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "elrr_private_kp",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0d75fc2c4107491ea",
            "private_dns": "ip-10-0-24-138.us-east-2.compute.internal",
            "private_ip": "10.0.24.138",
            "public_dns": "ec2-18-118-215-37.us-east-2.compute.amazonaws.com",
            "public_ip": "18.118.215.37",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-06ae13fa8be3f4df1",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ba3090805ceb9143",
            "tags": {
              "Name": "elrr_agent1"
            },
            "tags_all": {
              "Name": "elrr_agent1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0dc3a37f2c6844e0e"
            ]
          },
          "dependencies": [
            "aws_key_pair.elrr_private_kp",
            "aws_security_group.elrr_agent_sg",
            "aws_subnet.elrr_agent_subnet",
            "aws_vpc.elrr_vpc",
            "data.aws_availability_zones.elrr-azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "elrr_agent2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b9064170e32bde34",
            "arn": "arn:aws:ec2:us-east-2:452917972716:instance/i-02b55d0fef188e5ab",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "snapshot_id": "snap-05bc449e542abbf3d",
                "throughput": 0,
                "volume_id": "vol-04fa650df18afef64",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02b55d0fef188e5ab",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "elrr_private_kp",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0096dd213f021febc",
            "private_dns": "ip-10-0-24-156.us-east-2.compute.internal",
            "private_ip": "10.0.24.156",
            "public_dns": "ec2-18-222-220-183.us-east-2.compute.amazonaws.com",
            "public_ip": "18.222.220.183",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-04fa650df18afef64",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ba3090805ceb9143",
            "tags": {
              "Name": "elrr_agent2"
            },
            "tags_all": {
              "Name": "elrr_agent2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0dc3a37f2c6844e0e"
            ]
          },
          "dependencies": [
            "aws_key_pair.elrr_private_kp",
            "aws_security_group.elrr_agent_sg",
            "aws_subnet.elrr_agent_subnet",
            "aws_vpc.elrr_vpc",
            "data.aws_availability_zones.elrr-azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "elrr_agent3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b9064170e32bde34",
            "arn": "arn:aws:ec2:us-east-2:452917972716:instance/i-0f23f367a93a1d68e",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "snapshot_id": "snap-05bc449e542abbf3d",
                "throughput": 0,
                "volume_id": "vol-0a55fa2bafb32400b",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f23f367a93a1d68e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "elrr_private_kp",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0d4e77654b5463087",
            "private_dns": "ip-10-0-24-224.us-east-2.compute.internal",
            "private_ip": "10.0.24.224",
            "public_dns": "ec2-18-218-208-199.us-east-2.compute.amazonaws.com",
            "public_ip": "18.218.208.199",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0a55fa2bafb32400b",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ba3090805ceb9143",
            "tags": {
              "Name": "elrr_agent3"
            },
            "tags_all": {
              "Name": "elrr_agent3"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0dc3a37f2c6844e0e"
            ]
          },
          "dependencies": [
            "aws_key_pair.elrr_private_kp",
            "aws_security_group.elrr_agent_sg",
            "aws_subnet.elrr_agent_subnet",
            "aws_vpc.elrr_vpc",
            "data.aws_availability_zones.elrr-azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "elrr_agent4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b9064170e32bde34",
            "arn": "arn:aws:ec2:us-east-2:452917972716:instance/i-06214971c69b41d15",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "snapshot_id": "snap-05bc449e542abbf3d",
                "throughput": 0,
                "volume_id": "vol-0735281e0255c0359",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-06214971c69b41d15",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "elrr_private_kp",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-09cd67c4d44ece507",
            "private_dns": "ip-10-0-24-142.us-east-2.compute.internal",
            "private_ip": "10.0.24.142",
            "public_dns": "ec2-3-22-175-95.us-east-2.compute.amazonaws.com",
            "public_ip": "3.22.175.95",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0735281e0255c0359",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ba3090805ceb9143",
            "tags": {
              "Name": "elrr_agent4"
            },
            "tags_all": {
              "Name": "elrr_agent4"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0dc3a37f2c6844e0e"
            ]
          },
          "dependencies": [
            "aws_key_pair.elrr_private_kp",
            "aws_security_group.elrr_agent_sg",
            "aws_subnet.elrr_agent_subnet",
            "aws_vpc.elrr_vpc",
            "data.aws_availability_zones.elrr-azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "elrr_auth",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b9064170e32bde34",
            "arn": "arn:aws:ec2:us-east-2:452917972716:instance/i-0ea58c34d1a1c68e6",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "snapshot_id": "snap-05bc449e542abbf3d",
                "throughput": 0,
                "volume_id": "vol-0e51c99e9e227025a",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ea58c34d1a1c68e6",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "elrr_public_kp",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-09716a018f6bf208c",
            "private_dns": "ip-10-0-12-143.us-east-2.compute.internal",
            "private_ip": "10.0.12.143",
            "public_dns": "ec2-52-14-206-67.us-east-2.compute.amazonaws.com",
            "public_ip": "52.14.206.67",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0e51c99e9e227025a",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ec4446b760ed3359",
            "tags": {
              "Name": "elrr_auth"
            },
            "tags_all": {
              "Name": "elrr_auth"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0c8b24de9914af7cd"
            ]
          },
          "dependencies": [
            "aws_key_pair.elrr_public_kp",
            "aws_security_group.elrr_auth_sg",
            "aws_subnet.elrr_auth_subnet",
            "aws_vpc.elrr_vpc",
            "data.aws_availability_zones.elrr-azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "elrr_datasim",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b9064170e32bde34",
            "arn": "arn:aws:ec2:us-east-2:452917972716:instance/i-07fb0b4153dafe12d",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "snapshot_id": "snap-05bc449e542abbf3d",
                "throughput": 0,
                "volume_id": "vol-0e4de1f37e6845138",
                "volume_size": 20,
                "volume_type": "gp2"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07fb0b4153dafe12d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.small",
            "ipv6_address_count": 0,
            "key_name": "elrr_public_kp",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0e2b5115426c83114",
            "private_dns": "ip-10-0-28-119.us-east-2.compute.internal",
            "private_ip": "10.0.28.119",
            "public_dns": "ec2-18-118-104-73.us-east-2.compute.amazonaws.com",
            "public_ip": "18.118.104.73",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0e4de1f37e6845138",
                "volume_size": 20,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0bfa943b0069dd56a",
            "tags": {
              "Name": "elrr_datasim"
            },
            "tags_all": {
              "Name": "elrr_datasim"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-00f3f183dd70ee8f1"
            ]
          },
          "dependencies": [
            "aws_key_pair.elrr_public_kp",
            "aws_security_group.elrr_datasim_sg",
            "aws_subnet.elrr_datasim_subnet",
            "aws_vpc.elrr_vpc",
            "data.aws_availability_zones.elrr-azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "elrr_kafka",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b9064170e32bde34",
            "arn": "arn:aws:ec2:us-east-2:452917972716:instance/i-041d071f0b95681d5",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "snapshot_id": "snap-05bc449e542abbf3d",
                "throughput": 0,
                "volume_id": "vol-0772898f06c0b2470",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-041d071f0b95681d5",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "elrr_private_kp",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-027f1b236368b1681",
            "private_dns": "ip-10-0-20-244.us-east-2.compute.internal",
            "private_ip": "10.0.20.244",
            "public_dns": "ec2-18-223-248-107.us-east-2.compute.amazonaws.com",
            "public_ip": "18.223.248.107",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0772898f06c0b2470",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0bf8a7049621ce776",
            "tags": {
              "Name": "elrr_kafka"
            },
            "tags_all": {
              "Name": "elrr_kafka"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0485c8c7d277b5637"
            ]
          },
          "dependencies": [
            "aws_key_pair.elrr_private_kp",
            "aws_security_group.elrr_kafka_sg",
            "aws_subnet.elrr_kafka_subnet",
            "aws_vpc.elrr_vpc",
            "data.aws_availability_zones.elrr-azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "elrr_local_staging",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b9064170e32bde34",
            "arn": "arn:aws:ec2:us-east-2:452917972716:instance/i-0ba5fb69edfa1760d",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "snapshot_id": "snap-05bc449e542abbf3d",
                "throughput": 0,
                "volume_id": "vol-00ed9bf7c95537723",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ba5fb69edfa1760d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "elrr_private_kp",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0afb7967801f8ad5e",
            "private_dns": "ip-10-0-2-37.us-east-2.compute.internal",
            "private_ip": "10.0.2.37",
            "public_dns": "ec2-3-135-65-86.us-east-2.compute.amazonaws.com",
            "public_ip": "3.135.65.86",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-00ed9bf7c95537723",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-045695a0d3864a45d",
            "tags": {
              "Name": "elrr_local_staging"
            },
            "tags_all": {
              "Name": "elrr_local_staging"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-018e12d11a7677fdd"
            ]
          },
          "dependencies": [
            "aws_key_pair.elrr_private_kp",
            "aws_security_group.elrr_local_staging_sg",
            "aws_subnet.elrr_local_staging_subnet",
            "aws_vpc.elrr_vpc",
            "data.aws_availability_zones.elrr-azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "elrr_portal",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b9064170e32bde34",
            "arn": "arn:aws:ec2:us-east-2:452917972716:instance/i-0787ce773e9ca63f4",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "snapshot_id": "snap-05bc449e542abbf3d",
                "throughput": 0,
                "volume_id": "vol-0745bf629ea284f47",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0787ce773e9ca63f4",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "elrr_public_kp",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-089074261419926bf",
            "private_dns": "ip-10-0-12-161.us-east-2.compute.internal",
            "private_ip": "10.0.12.161",
            "public_dns": "ec2-18-117-117-139.us-east-2.compute.amazonaws.com",
            "public_ip": "18.117.117.139",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0745bf629ea284f47",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ec4446b760ed3359",
            "tags": {
              "Name": "elrr_portal"
            },
            "tags_all": {
              "Name": "elrr_portal"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-08697831cce2f19d0"
            ]
          },
          "dependencies": [
            "aws_key_pair.elrr_public_kp",
            "aws_security_group.elrr_portal_sg",
            "aws_subnet.elrr_auth_subnet",
            "aws_vpc.elrr_vpc",
            "data.aws_availability_zones.elrr-azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "elrr_storage",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b9064170e32bde34",
            "arn": "arn:aws:ec2:us-east-2:452917972716:instance/i-0ebc7950317dd71b2",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "snapshot_id": "snap-05bc449e542abbf3d",
                "throughput": 0,
                "volume_id": "vol-054891658548ddcc8",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ebc7950317dd71b2",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "elrr_private_kp",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0644ab8ce22683160",
            "private_dns": "ip-10-0-8-86.us-east-2.compute.internal",
            "private_ip": "10.0.8.86",
            "public_dns": "ec2-52-15-144-86.us-east-2.compute.amazonaws.com",
            "public_ip": "52.15.144.86",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-054891658548ddcc8",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-016a4ea6d56179410",
            "tags": {
              "Name": "elrr_storage"
            },
            "tags_all": {
              "Name": "elrr_storage"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-01e8c7dedb204b4b4"
            ]
          },
          "dependencies": [
            "aws_key_pair.elrr_private_kp",
            "aws_security_group.elrr_storage_sg",
            "aws_subnet.elrr_storage_subnet",
            "aws_vpc.elrr_vpc",
            "data.aws_availability_zones.elrr-azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "elrr_xapi_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b9064170e32bde34",
            "arn": "arn:aws:ec2:us-east-2:452917972716:instance/i-0c370323039bd00a7",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "snapshot_id": "snap-05bc449e542abbf3d",
                "throughput": 0,
                "volume_id": "vol-0945118203fa67660",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c370323039bd00a7",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "elrr_public_kp",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0a2e44802cb694112",
            "private_dns": "ip-10-0-6-35.us-east-2.compute.internal",
            "private_ip": "10.0.6.35",
            "public_dns": "ec2-3-139-72-44.us-east-2.compute.amazonaws.com",
            "public_ip": "3.139.72.44",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0945118203fa67660",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-047006a092906374f",
            "tags": {
              "Name": "elrr_xapi_gateway"
            },
            "tags_all": {
              "Name": "elrr_xapi_gateway"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-05dc56271d02cafc4"
            ]
          },
          "dependencies": [
            "aws_key_pair.elrr_public_kp",
            "aws_security_group.elrr_xapi_gw_sg",
            "aws_subnet.elrr_xapi_gateway_subnet",
            "aws_vpc.elrr_vpc",
            "data.aws_availability_zones.elrr-azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "elrr_zookeeper",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b9064170e32bde34",
            "arn": "arn:aws:ec2:us-east-2:452917972716:instance/i-0c89813aa49c14517",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "snapshot_id": "snap-05bc449e542abbf3d",
                "throughput": 0,
                "volume_id": "vol-0147b0b423d532eaa",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c89813aa49c14517",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "elrr_private_kp",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0d751c350a8625e22",
            "private_dns": "ip-10-0-20-176.us-east-2.compute.internal",
            "private_ip": "10.0.20.176",
            "public_dns": "ec2-18-118-78-13.us-east-2.compute.amazonaws.com",
            "public_ip": "18.118.78.13",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0147b0b423d532eaa",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0bf8a7049621ce776",
            "tags": {
              "Name": "elrr_zookeeper"
            },
            "tags_all": {
              "Name": "elrr_zookeeper"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-07684c69a402deb6f"
            ]
          },
          "dependencies": [
            "aws_key_pair.elrr_private_kp",
            "aws_security_group.elrr_zookeeper_sg",
            "aws_subnet.elrr_kafka_subnet",
            "aws_vpc.elrr_vpc",
            "data.aws_availability_zones.elrr-azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "elrr_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:452917972716:internet-gateway/igw-0f35fb687315ea94f",
            "id": "igw-0f35fb687315ea94f",
            "owner_id": "452917972716",
            "tags": {
              "Name": "elrr_igw"
            },
            "tags_all": {
              "Name": "elrr_igw"
            },
            "vpc_id": "vpc-0215e06f04c3ea790"
          },
          "dependencies": [
            "aws_vpc.elrr_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "elrr_agent1_interface",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "eni-0a9bef90b46dc0fd8",
            "interface_type": "interface",
            "ipv6_address_count": 0,
            "mac_address": "06:33:2a:97:4e:f6",
            "private_dns_name": "ip-10-0-24-117.us-east-2.compute.internal",
            "private_ip": "10.0.24.117",
            "private_ips": [
              "10.0.24.117"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0c239291f060fa5b9"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ba3090805ceb9143",
            "tags": {
              "Name": "elrr_agent1_interface"
            },
            "tags_all": {
              "Name": "elrr_agent1_interface"
            }
          },
          "dependencies": [
            "aws_subnet.elrr_agent_subnet",
            "aws_vpc.elrr_vpc",
            "data.aws_availability_zones.elrr-azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "elrr_agent2_interface",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "eni-06a615e50d817c5ba",
            "interface_type": "interface",
            "ipv6_address_count": 0,
            "mac_address": "06:91:92:fd:17:1e",
            "private_dns_name": "ip-10-0-24-194.us-east-2.compute.internal",
            "private_ip": "10.0.24.194",
            "private_ips": [
              "10.0.24.194"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0c239291f060fa5b9"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ba3090805ceb9143",
            "tags": {
              "Name": "elrr_agent2_interface"
            },
            "tags_all": {
              "Name": "elrr_agent2_interface"
            }
          },
          "dependencies": [
            "aws_subnet.elrr_agent_subnet",
            "aws_vpc.elrr_vpc",
            "data.aws_availability_zones.elrr-azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "elrr_agent3_interface",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "eni-0197e495bbb79496e",
            "interface_type": "interface",
            "ipv6_address_count": 0,
            "mac_address": "06:db:31:82:bc:68",
            "private_dns_name": "ip-10-0-24-124.us-east-2.compute.internal",
            "private_ip": "10.0.24.124",
            "private_ips": [
              "10.0.24.124"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0c239291f060fa5b9"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ba3090805ceb9143",
            "tags": {
              "Name": "elrr_agent3_interface"
            },
            "tags_all": {
              "Name": "elrr_agent3_interface"
            }
          },
          "dependencies": [
            "aws_subnet.elrr_agent_subnet",
            "aws_vpc.elrr_vpc",
            "data.aws_availability_zones.elrr-azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "elrr_agent4_interface",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "eni-0f5f3363048ae47eb",
            "interface_type": "interface",
            "ipv6_address_count": 0,
            "mac_address": "06:68:98:4f:94:90",
            "private_dns_name": "ip-10-0-24-100.us-east-2.compute.internal",
            "private_ip": "10.0.24.100",
            "private_ips": [
              "10.0.24.100"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0c239291f060fa5b9"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ba3090805ceb9143",
            "tags": {
              "Name": "elrr_agent4_interface"
            },
            "tags_all": {
              "Name": "elrr_agent4_interface"
            }
          },
          "dependencies": [
            "aws_subnet.elrr_agent_subnet",
            "aws_vpc.elrr_vpc",
            "data.aws_availability_zones.elrr-azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "elrr_auth_interface",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "eni-066f36507951a3f0e",
            "interface_type": "interface",
            "ipv6_address_count": 0,
            "mac_address": "06:f4:f7:30:0d:b6",
            "private_dns_name": "ip-10-0-12-219.us-east-2.compute.internal",
            "private_ip": "10.0.12.219",
            "private_ips": [
              "10.0.12.219"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0c239291f060fa5b9"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ec4446b760ed3359",
            "tags": {
              "Name": "elrr_auth_interface"
            },
            "tags_all": {
              "Name": "elrr_auth_interface"
            }
          },
          "dependencies": [
            "aws_subnet.elrr_auth_subnet",
            "aws_vpc.elrr_vpc",
            "data.aws_availability_zones.elrr-azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "elrr_datasim_interface",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "eni-0fc3fb584b90b3d0b",
            "interface_type": "interface",
            "ipv6_address_count": 0,
            "mac_address": "06:0a:cc:c1:19:7a",
            "private_dns_name": "ip-10-0-28-155.us-east-2.compute.internal",
            "private_ip": "10.0.28.155",
            "private_ips": [
              "10.0.28.155"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0c239291f060fa5b9"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0bfa943b0069dd56a",
            "tags": {
              "Name": "elrr_datasim_interface"
            },
            "tags_all": {
              "Name": "elrr_datasim_interface"
            }
          },
          "dependencies": [
            "aws_subnet.elrr_datasim_subnet",
            "aws_vpc.elrr_vpc",
            "data.aws_availability_zones.elrr-azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "elrr_kafka_interface",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "eni-08d6dd5e298ecd71e",
            "interface_type": "interface",
            "ipv6_address_count": 0,
            "mac_address": "06:bc:54:ab:ad:dc",
            "private_dns_name": "ip-10-0-20-175.us-east-2.compute.internal",
            "private_ip": "10.0.20.175",
            "private_ips": [
              "10.0.20.175"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0c239291f060fa5b9"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0bf8a7049621ce776",
            "tags": {
              "Name": "elrr_kafka_interface"
            },
            "tags_all": {
              "Name": "elrr_kafka_interface"
            }
          },
          "dependencies": [
            "aws_subnet.elrr_kafka_subnet",
            "aws_vpc.elrr_vpc",
            "data.aws_availability_zones.elrr-azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "elrr_local_staging_interface",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "eni-025f3c2ca611c45a1",
            "interface_type": "interface",
            "ipv6_address_count": 0,
            "mac_address": "06:f7:65:ed:f0:c6",
            "private_dns_name": "ip-10-0-2-251.us-east-2.compute.internal",
            "private_ip": "10.0.2.251",
            "private_ips": [
              "10.0.2.251"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0c239291f060fa5b9"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-045695a0d3864a45d",
            "tags": {
              "Name": "elrr_local_staging_interface"
            },
            "tags_all": {
              "Name": "elrr_local_staging_interface"
            }
          },
          "dependencies": [
            "aws_subnet.elrr_local_staging_subnet",
            "aws_vpc.elrr_vpc",
            "data.aws_availability_zones.elrr-azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "elrr_portal_interface",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "eni-06b8f67a6a846d13d",
            "interface_type": "interface",
            "ipv6_address_count": 0,
            "mac_address": "06:59:b7:44:a4:18",
            "private_dns_name": "ip-10-0-16-140.us-east-2.compute.internal",
            "private_ip": "10.0.16.140",
            "private_ips": [
              "10.0.16.140"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0c239291f060fa5b9"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b534391fc07838f5",
            "tags": {
              "Name": "elrr_portal_interface"
            },
            "tags_all": {
              "Name": "elrr_portal_interface"
            }
          },
          "dependencies": [
            "aws_subnet.elrr_portal_subnet",
            "aws_vpc.elrr_vpc",
            "data.aws_availability_zones.elrr-azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "elrr_storage_interface",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "eni-045dbf865e203f73f",
            "interface_type": "interface",
            "ipv6_address_count": 0,
            "mac_address": "06:6a:7f:e5:41:ce",
            "private_dns_name": "ip-10-0-8-212.us-east-2.compute.internal",
            "private_ip": "10.0.8.212",
            "private_ips": [
              "10.0.8.212"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0c239291f060fa5b9"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-016a4ea6d56179410",
            "tags": {
              "Name": "elrr_storage_interface"
            },
            "tags_all": {
              "Name": "elrr_storage_interface"
            }
          },
          "dependencies": [
            "aws_subnet.elrr_storage_subnet",
            "aws_vpc.elrr_vpc",
            "data.aws_availability_zones.elrr-azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "elrr_xapi_gw_network_interface",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "eni-0d2e390c19e42b33f",
            "interface_type": "interface",
            "ipv6_address_count": 0,
            "mac_address": "02:e2:6c:ad:17:8c",
            "private_dns_name": "ip-10-0-6-85.us-east-2.compute.internal",
            "private_ip": "10.0.6.85",
            "private_ips": [
              "10.0.6.85"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0c239291f060fa5b9"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-047006a092906374f",
            "tags": {
              "Name": "elrr_xapi_gw_network_interface"
            },
            "tags_all": {
              "Name": "elrr_xapi_gw_network_interface"
            }
          },
          "dependencies": [
            "aws_subnet.elrr_xapi_gateway_subnet",
            "aws_vpc.elrr_vpc",
            "data.aws_availability_zones.elrr-azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "elrr_zookeeper_interface",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "eni-0133e68960b21ef81",
            "interface_type": "interface",
            "ipv6_address_count": 0,
            "mac_address": "06:af:1a:5f:80:44",
            "private_dns_name": "ip-10-0-20-47.us-east-2.compute.internal",
            "private_ip": "10.0.20.47",
            "private_ips": [
              "10.0.20.47"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0c239291f060fa5b9"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0bf8a7049621ce776",
            "tags": {
              "Name": "elrr_zookeeper_interface"
            },
            "tags_all": {
              "Name": "elrr_zookeeper_interface"
            }
          },
          "dependencies": [
            "aws_subnet.elrr_kafka_subnet",
            "aws_vpc.elrr_vpc",
            "data.aws_availability_zones.elrr-azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "elrr_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:452917972716:route-table/rtb-02d16dd84b228ebaf",
            "id": "rtb-02d16dd84b228ebaf",
            "owner_id": "452917972716",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f35fb687315ea94f",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "elrr_route_table"
            },
            "tags_all": {
              "Name": "elrr_route_table"
            },
            "vpc_id": "vpc-0215e06f04c3ea790"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.elrr_igw",
            "aws_vpc.elrr_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "elrr_agent_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:452917972716:security-group/sg-0dc3a37f2c6844e0e",
            "description": "Allow kafka and zookeeper communication",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0dc3a37f2c6844e0e",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "TLS from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "TLS from VPC",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "TLS from VPC",
                "from_port": 9092,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9092
              }
            ],
            "name": "elrr_agent_sg",
            "name_prefix": "",
            "owner_id": "452917972716",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "elrr_agent_sg"
            },
            "tags_all": {
              "Name": "elrr_agent_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0215e06f04c3ea790"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.elrr_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "elrr_auth_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:452917972716:security-group/sg-0c8b24de9914af7cd",
            "description": "Allow connection from elrr auth",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c8b24de9914af7cd",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "TLS from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "TLS from VPC",
                "from_port": 5453,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5453
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "TLS from VPC",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "elrr_auth_sg",
            "name_prefix": "",
            "owner_id": "452917972716",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "elrr_auth_sg"
            },
            "tags_all": {
              "Name": "elrr_auth_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0215e06f04c3ea790"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.elrr_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "elrr_datasim_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:452917972716:security-group/sg-00f3f183dd70ee8f1",
            "description": "Allow datasim communication",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00f3f183dd70ee8f1",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "TLS from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "TLS from VPC",
                "from_port": 9091,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9091
              }
            ],
            "name": "elrr_datasim_sg",
            "name_prefix": "",
            "owner_id": "452917972716",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "elrr_datasim_sg"
            },
            "tags_all": {
              "Name": "elrr_datasim_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0215e06f04c3ea790"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.elrr_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "elrr_kafka_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:452917972716:security-group/sg-0485c8c7d277b5637",
            "description": "Allow kafka and zookeeper communication",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0485c8c7d277b5637",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "TLS from VPC",
                "from_port": 2181,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 2181
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "TLS from VPC",
                "from_port": 2888,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 2888
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "TLS from VPC",
                "from_port": 9092,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9092
              }
            ],
            "name": "elrr_kafka_sg",
            "name_prefix": "",
            "owner_id": "452917972716",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "elrr_kafka_sg"
            },
            "tags_all": {
              "Name": "elrr_kafka_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0215e06f04c3ea790"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.elrr_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "elrr_local_staging_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:452917972716:security-group/sg-018e12d11a7677fdd",
            "description": "Allow MySQL connectivity",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-018e12d11a7677fdd",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "TLS from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "TLS from VPC",
                "from_port": 5453,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5453
              }
            ],
            "name": "elrr_local_staging_sg",
            "name_prefix": "",
            "owner_id": "452917972716",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "elrr_local_staging_sg"
            },
            "tags_all": {
              "Name": "elrr_local_staging_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0215e06f04c3ea790"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.elrr_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "elrr_portal_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:452917972716:security-group/sg-08697831cce2f19d0",
            "description": "Allow user connectivity",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08697831cce2f19d0",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "TLS from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "TLS from VPC",
                "from_port": 5453,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5453
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "TLS from VPC",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "elrr_portal_sg",
            "name_prefix": "",
            "owner_id": "452917972716",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "elrr_portal_sg"
            },
            "tags_all": {
              "Name": "elrr_portal_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0215e06f04c3ea790"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.elrr_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "elrr_storage_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:452917972716:security-group/sg-01e8c7dedb204b4b4",
            "description": "Allow MySQL connectivity",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01e8c7dedb204b4b4",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "TLS from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "TLS from VPC",
                "from_port": 5453,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5453
              }
            ],
            "name": "elrr_storage_sg",
            "name_prefix": "",
            "owner_id": "452917972716",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "elrr_storage_sg"
            },
            "tags_all": {
              "Name": "elrr_storage_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0215e06f04c3ea790"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.elrr_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "elrr_xapi_gw_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:452917972716:security-group/sg-05dc56271d02cafc4",
            "description": "Allow TLS inbound traffic on ports 9200 \u0026 443",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05dc56271d02cafc4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "TLS from VPC",
                "from_port": 9200,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9200
              }
            ],
            "name": "elrr_xapi_gw_sg",
            "name_prefix": "",
            "owner_id": "452917972716",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "elrr_xapi_gw_sg"
            },
            "tags_all": {
              "Name": "elrr_xapi_gw_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0215e06f04c3ea790"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.elrr_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "elrr_zookeeper_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:452917972716:security-group/sg-07684c69a402deb6f",
            "description": "Allow kafka and zookeeper communication",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07684c69a402deb6f",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "TLS from VPC",
                "from_port": 2181,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 2181
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "TLS from VPC",
                "from_port": 2888,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 2888
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "TLS from VPC",
                "from_port": 9092,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9092
              }
            ],
            "name": "elrr_zookeeper_sg",
            "name_prefix": "",
            "owner_id": "452917972716",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "elrr_zookeeper_sg"
            },
            "tags_all": {
              "Name": "elrr_zookeeper_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0215e06f04c3ea790"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.elrr_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "elrr_agent_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:452917972716:subnet/subnet-0ba3090805ceb9143",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.24.0/24",
            "id": "subnet-0ba3090805ceb9143",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "452917972716",
            "tags": {
              "Name": "elrr_agent_subnet"
            },
            "tags_all": {
              "Name": "elrr_agent_subnet"
            },
            "vpc_id": "vpc-0215e06f04c3ea790"
          },
          "dependencies": [
            "aws_vpc.elrr_vpc",
            "data.aws_availability_zones.elrr-azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "elrr_auth_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:452917972716:subnet/subnet-0ec4446b760ed3359",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.12.0/24",
            "id": "subnet-0ec4446b760ed3359",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "452917972716",
            "tags": {
              "Name": "elrr_auth_subnet"
            },
            "tags_all": {
              "Name": "elrr_auth_subnet"
            },
            "vpc_id": "vpc-0215e06f04c3ea790"
          },
          "dependencies": [
            "aws_vpc.elrr_vpc",
            "data.aws_availability_zones.elrr-azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "elrr_datasim_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:452917972716:subnet/subnet-0bfa943b0069dd56a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.28.0/24",
            "id": "subnet-0bfa943b0069dd56a",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "452917972716",
            "tags": {
              "Name": "elrr_datasim_subnet"
            },
            "tags_all": {
              "Name": "elrr_datasim_subnet"
            },
            "vpc_id": "vpc-0215e06f04c3ea790"
          },
          "dependencies": [
            "aws_vpc.elrr_vpc",
            "data.aws_availability_zones.elrr-azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "elrr_kafka_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:452917972716:subnet/subnet-0bf8a7049621ce776",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.20.0/24",
            "id": "subnet-0bf8a7049621ce776",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "452917972716",
            "tags": {
              "Name": "elrr_kafka_subnet"
            },
            "tags_all": {
              "Name": "elrr_kafka_subnet"
            },
            "vpc_id": "vpc-0215e06f04c3ea790"
          },
          "dependencies": [
            "aws_vpc.elrr_vpc",
            "data.aws_availability_zones.elrr-azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "elrr_local_staging_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:452917972716:subnet/subnet-045695a0d3864a45d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-045695a0d3864a45d",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "452917972716",
            "tags": {
              "Name": "elrr_local_staging_subnet"
            },
            "tags_all": {
              "Name": "elrr_local_staging_subnet"
            },
            "vpc_id": "vpc-0215e06f04c3ea790"
          },
          "dependencies": [
            "aws_vpc.elrr_vpc",
            "data.aws_availability_zones.elrr-azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "elrr_portal_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:452917972716:subnet/subnet-0b534391fc07838f5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.16.0/24",
            "id": "subnet-0b534391fc07838f5",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "452917972716",
            "tags": {
              "Name": "elrr_portal_subnet"
            },
            "tags_all": {
              "Name": "elrr_portal_subnet"
            },
            "vpc_id": "vpc-0215e06f04c3ea790"
          },
          "dependencies": [
            "aws_vpc.elrr_vpc",
            "data.aws_availability_zones.elrr-azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "elrr_storage_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:452917972716:subnet/subnet-016a4ea6d56179410",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.8.0/24",
            "id": "subnet-016a4ea6d56179410",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "452917972716",
            "tags": {
              "Name": "elrr_storage_subnet"
            },
            "tags_all": {
              "Name": "elrr_storage_subnet"
            },
            "vpc_id": "vpc-0215e06f04c3ea790"
          },
          "dependencies": [
            "aws_vpc.elrr_vpc",
            "data.aws_availability_zones.elrr-azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "elrr_xapi_gateway_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:452917972716:subnet/subnet-047006a092906374f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.6.0/24",
            "id": "subnet-047006a092906374f",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "452917972716",
            "tags": {
              "Name": "elrr_xapi_gateway_subnet"
            },
            "tags_all": {
              "Name": "elrr_xapi_gateway_subnet"
            },
            "vpc_id": "vpc-0215e06f04c3ea790"
          },
          "dependencies": [
            "aws_vpc.elrr_vpc",
            "data.aws_availability_zones.elrr-azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "elrr_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:452917972716:vpc/vpc-0215e06f04c3ea790",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-07cd9e25f5ee06066",
            "default_route_table_id": "rtb-0f277b6bb86a4d964",
            "default_security_group_id": "sg-0c239291f060fa5b9",
            "dhcp_options_id": "dopt-29b9c642",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0215e06f04c3ea790",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0f277b6bb86a4d964",
            "owner_id": "452917972716",
            "tags": {
              "Name": "elrr_vpc"
            },
            "tags_all": {
              "Name": "elrr_vpc"
            }
          }
        }
      ]
    }
  ]
}